fix: corrections for passing statistical tests